--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -1,28 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-  
+    <link rel="stylesheet" href="project.js">
 </head>
-<body>  
-   <script>
-//const inputChoice = prompt("let's start the game, enter your guess", );
-function getComputerChoice () {
-    let choices = ["rock","paper", "scissor"];
-    let randomValue = Math.floor(Math.random()*choices.length);
-    return choices[randomValue];
-}
-function playRound (playerSelection, computerSelection) {
-    
-}
+
+<body>
+    <script>
+
+        //const inputChoice = prompt("let's start the game, enter your guess", );
+        function getComputerChoice() {
+            let choices = ["rock", "paper", "scissor"];
+            // select a random value from choices
+            let randomValue = Math.floor(Math.random() * choices.length);
+            return choices[randomValue];
+        }
+        function playRound(playerSelection, computerSelection) {
+            for (let i = 0; i <= 4; i++) {
+                if (playerSelection == computerSelection) {
+                    return "Equal points";
+                } else if (playerSelection === "rock" && computerSelection === "scissor") {
+                    return "you win, Rock beats Scissor";
+                } else if (playerSelection === "rock" && computerSelection === "paper") {
+                    return "You lose! Paper beats Rock";
+                } else if (playerSelection === "paper" && computerSelection === "rock") {
+                    return "You win!, Paper beats Rock";
+                } else if (playerSelection === "paper" && computerSelection === "scissor") {
+                    return "You lose! Scissor beats paper";
+                } else if (playerSelection === "scissor" && computerSelection === "rock") {
+                    return "You lose! Rock beats Scissors";
+                } else if (playerSelection === "scissor" && computerSelection === "paper") {
+                    return "You win, Scissor beats Paper";
+                } else {
+                    return "The value is  invalid";
+                }
+            }
+        }
+
+        const playerSelection = prompt("What are you gonna choose? ")
 
 
-   // a fucnti
+        // console.log(playRound(playerSelection, computerSelection));
+
+        function games() {
+            console.log(playRound(playerSelection, computerSelection));
+
+
+        }
+        games();
+
+
+
+
+
    // Create a variable that asks the user for a value.
    // Start the game with a function that returns a random value from "rock", "paper" or "Scissor"
-   // after that ask the user for an input 
+   // after that ask the user for an input
    // console random string from the computer
    // If user input is == random string you should output "play again" and continue
    // If user input is == rock and random string == scissor, then output "You win" and quit
@@ -31,7 +67,8 @@ function playRound (playerSelection, computerSelection) {
    // If user input is == paper and random string == scissor, then output "you lose" and quit
    // If user input is ==  scissor and random string == rock, then output "you lose" and quit
    // If user input is ==  scissor and random string == paper, then out "you win" and quit
-</script>
+    </script>
 
 </body>
-</html  
+
+</html
