--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="project.js">
+<link rel="stylesheet" href="project.js">
 </head>
 
 <body>
     <script>
-
+        
         //const inputChoice = prompt("let's start the game, enter your guess", );
         function getComputerChoice() {
             let choices = ["rock", "paper", "scissor"];
@@ -19,43 +19,28 @@
             return choices[randomValue];
         }
         function playRound(playerSelection, computerSelection) {
-            for (let i = 0; i <= 4; i++) {
-                if (playerSelection == computerSelection) {
-                    return "Equal points";
-                } else if (playerSelection === "rock" && computerSelection === "scissor") {
-                    return "you win, Rock beats Scissor";
-                } else if (playerSelection === "rock" && computerSelection === "paper") {
-                    return "You lose! Paper beats Rock";
-                } else if (playerSelection === "paper" && computerSelection === "rock") {
-                    return "You win!, Paper beats Rock";
-                } else if (playerSelection === "paper" && computerSelection === "scissor") {
-                    return "You lose! Scissor beats paper";
-                } else if (playerSelection === "scissor" && computerSelection === "rock") {
-                    return "You lose! Rock beats Scissors";
-                } else if (playerSelection === "scissor" && computerSelection === "paper") {
-                    return "You win, Scissor beats Paper";
-                } else {
-                    return "The value is  invalid";
-                }
+            if (playerSelection == computerSelection) {
+                return "Equal points";
+            } else if (playerSelection === "rock" && computerSelection === "scissor") {
+                return "you win, Rock beats Scissor";
+            } else if (playerSelection === "rock" && computerSelection === "paper") {
+                return "You lose! Paper beats Rock";
+            } else if (playerSelection === "paper" && computerSelection === "rock") {
+                return "You win!, Paper beats Rock";
+            } else if (playerSelection === "paper" && computerSelection === "scissor") {
+                return "You lose! Scissor beats paper";
+            } else if (playerSelection === "scissor" && computerSelection === "rock") {
+                return "You lose! Rock beats Scissors";
+            } else if (playerSelection === "scissor" && computerSelection === "paper") {
+                return "You win, Scissor beats Paper";
+            } else {
+                return "The value is  invalid";
             }
         }
-
-        const playerSelection = prompt("What are you gonna choose? ")
-
-
-        // console.log(playRound(playerSelection, computerSelection));
-
-        function games() {
-            console.log(playRound(playerSelection, computerSelection));
-
-
-        }
-        games();
-
-
-
-
-
+        const playerSelection = prompt("What is your guese?");
+        const computerSelection = getComputerChoice();
+        console.log(playRound(playerSelection,computerSelection));
+        
    // Create a variable that asks the user for a value.
    // Start the game with a function that returns a random value from "rock", "paper" or "Scissor"
    // after that ask the user for an input
