--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="project.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body
@@ -18,72 +18,10 @@
     <button class="paper">Paper</button>
     <button class="scissor">Scissor</button>
     </div>
+    <!---->
+    <div class="computerPoints"><p>Computer points</p></div>
+    <div class="playerPoints">player points</div>
     <div class="result"></div>
-    <style>
-        body {
-            padding:0;
-            margin:0;
-            box-sizing:border-box;
-            background-color:rgb(74, 74, 100);
-            font-family:'lato', sans-serif;
-
-        }
-        .choices {
-            display:flex;
-            justify-content:center;
-            flex-direction:column;
-            align-items:center;
-            padding:10px 20px;
-            margin:300px;
-            gap:20px;
-            
-        }
-        .rock{
-            width:400px;
-            height:50px;
-            font-size:2rem;
-            border:2px solid white;
-            border-radius:5px;
-            box-shadow:0 0 10px white;
-            align-items:center;
-            cursor: pointer;
-            padding:3px 20px;
-        }
-        .paper {
-            width:400px;
-            height:50px;
-            font-size:2rem;
-            border:2px solid white;
-            border-radius:5px;
-            box-shadow:0 0 10px white;
-            cursor: pointer;
-            padding:3px 13px;
-        }
-        .scissor {
-            width:200px;
-            height:50px;
-            font-size:2rem;
-            border:2px solid white;
-            border-radius:5px;
-            box-shadow:0 0 10px pink;
-            cursor: pointer;
-        }
-        .result {
-            display:flex;
-            color:white;
-            background-color:transparent;
-            border:2px solid gray;
-            align-items:center;
-            text-align:center;
-            border-radius:5px;
-            width:350px;
-            height:80px;
-            font-size:2rem;
-            padding:4px;
-            
-        }
-
-    </style>
     <script src="project.js">
     </script>
 </body>
