Finish The Project

--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -14,14 +14,17 @@
 
 <body
     <div class="choices">
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissor">Scissor</button>
+    <button class="rock"><img src="/MyProject/fist.png" alt="fist picture" width="40px"></button>
+    <button class="paper"><img src="/MyProject/airplane.png" alt="airplane image" width="40px"></button>
+    <button class="scissor"><img src="/MyProject/scissors.png" alt="Scissor image" width="40px"></button>
     </div>
     <!---->
-    <div class="computerPoints"><p>Computer points</p></div>
-    <div class="playerPoints">player points</div>
-    <div class="result"></div>
+    <div class="points">
+        <div class="computerPoints"><p>Computer points</p></div>
+        <div class="playerPoints">player points</div>
+    </div>
+    <div class="result">Good Luck</div>
+    <button id="resetBtn">Reset</button>
     <script src="project.js">
     </script>
 </body>
